<resources>

    <!-- Strings for activity_main -->
    <string name="app_name">Rentables</string>
    <string name="login_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button_text">Log in</string>
    <string name="Register">Register</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up"><u>SIGN UP</u></string>

    <!-- Strings for activity_forgot_pass-->
    <string name="enter_username">Please enter your username</string>

    <!-- Strings for activity_register_user -->
    <string name="register_email">Email</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_password">Password</string>
    <string name="register_button">REGISTER</string>

    <!-- Strings for the overflow menu -->
    <string name="overflow_settings_string">Settings</string>
    <string name="overflow_account_string">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name ="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string-array name="RentalTime">
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Semester</item>
    </string-array>
</resources>
