<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/register_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_first_name"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_last_name"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginBottom="20dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>